Fix unnecessary horizontal scroll by using width 100% instead of vw

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ input {
     background: var(--text);
     display: flex;
     overflow: hidden !important;
-    width: 99.9vw;
+    width: 100%;
 }
 
 .navigation {
